--- a/metadata.yaml
+++ b/metadata.yaml
@@ -1,5 +1,5 @@
-name: helloworld # 这是你的插件的唯一识别名。
-desc: 这是 AstrBot 的默认插件，支持关键词回复。 # 插件简短描述
-version: v1.3 # 插件版本号。格式：v1.1.1 或者 v1.1
-author: Soulter # 作者
-repo: https://github.com/Soulter/helloworld # 插件的仓库地址
+name: astrbot_plugin_ba_pvp_tool # 这是你的插件的唯一识别名。
+desc: 这是蔚蓝档案竞技场的排名监控插件。 # 插件简短描述
+version: v1.0 # 插件版本号。格式：v1.1.1 或者 v1.1
+author: YiktLLW # 作者
+repo: https://github.com/yiktllw/astrbot_plugin_ba_pvp_tool # 插件的仓库地址
